--- a/index.html
+++ b/index.html
@@ -12,28 +12,6 @@
     src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
-<script>
-
-    AFRAME.registerComponent('markerhandler', {
-        init: function () {
-
-            this.el.sceneEl.addEventListener('markerLost', (event) => {
-                document.getElementById("video").pause(); //reference to the video
-
-                console.log("lost");
-            });
-
-            this.el.sceneEl.addEventListener('markerFound', (event) => {
-                document.getElementById("video").play(); //reference to the video
-
-                console.log("found");
-            });
-        },
-
-    });
-</script>
-
-
 <!-- style for the loader -->
 <style>
     .arjs-loader {
@@ -74,13 +52,11 @@
         <!-- a-nft is the anchor that defines an Image Tracking entity -->
         <!-- on 'url' use the path to the Image Descriptors created before. -->
         <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
-        <a-nft type="nft" url="https://t3hcyberrat.github.io/ctest.t3/assets/test_4" smooth="true" smoothCount="10"
-            smoothTolerance=".01" smoothThreshold="5">
+        <a-nft type="nft" url="https://t3hcyberrat.github.io/ctest.t3/assets/CakeDay_compiled_0" smooth="true"
+            smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
             <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
-            <!-- <a-entity gltf-model="assets/34.glb" scale="40 40 40" position="10 10 -100">
-                </a-entity> -->
-
-            <a-video src="#video" markerhandler width="160" height="100" rotation="-90" position="10 10 -100"></a-video>
+            <a-entity gltf-model="assets/bday.glb" scale="40 40 40" position="10 10 -100">
+            </a-entity>
         </a-nft>
         <!-- static camera that moves according to the device movemenents -->
         <a-entity camera></a-entity>
