--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <title>Experiment_clothing_0</title>
 
 <!-- import aframe and then ar.js with image tracking / location based features -->
-<script
-    src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
 <!-- style for the loader -->
@@ -44,18 +43,13 @@
     <a-scene vr-mode-ui="enabled: false;" renderer="logarithmicDepthBuffer: true;" embedded
         arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: true;">
 
-        <a-assets>
-            <!-- <video id="video" loop="true" src="assets/test_11.mp4"></video> -->
-            <video id="video" loop="true" src="assets/T3st.mp4"></video>
-        </a-assets>
-
         <!-- a-nft is the anchor that defines an Image Tracking entity -->
         <!-- on 'url' use the path to the Image Descriptors created before. -->
         <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
         <a-nft type="nft" url="https://t3hcyberrat.github.io/cake_day/assets/CakeDay_compiled_0" smooth="true"
             smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
             <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
-            <a-entity gltf-model="assets/bday.glb" scale="20 20 20" position="50 150 0">
+            <a-entity gltf-model="assets/bday.glb" scale="10 10 10" position="10 0 -100">
             </a-entity>
         </a-nft>
         <!-- static camera that moves according to the device movemenents -->
