--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <a-nft type="nft" url="https://t3hcyberrat.github.io/cake_day/assets/CakeDay_compiled_1" smooth="true"
             smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
             <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
-            <a-entity gltf-model="assets/bday.glb" scale="10 10 10" position="50 40 -600">
+            <a-entity gltf-model="assets/bday.glb" scale="10 10 10" position="50 40 -600" rotation="0 90 0">
             </a-entity>
         </a-nft>
         <!-- static camera that moves according to the device movemenents -->
