Changed asset pos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- a-frame scene -->
     <a-scene vr-mode-ui="enabled: false;" renderer="logarithmicDepthBuffer: true;" embedded
-        arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: true;">
+        arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
 
         <!-- a-nft is the anchor that defines an Image Tracking entity -->
         <!-- on 'url' use the path to the Image Descriptors created before. -->
@@ -50,7 +50,7 @@
         <a-nft type="nft" url="https://t3hcyberrat.github.io/cake_day/assets/CakeDay_compiled_1" smooth="true"
             smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
             <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
-            <a-entity gltf-model="assets/bday.glb" scale="17 17 17" position="100 10 -600" rotation="-90 0 0">
+            <a-entity gltf-model="assets/bday.glb" scale="17 17 17" position="100 0 -600" rotation="-90 0 0">
             </a-entity>
         </a-nft>
         <!-- static camera that moves according to the device movemenents -->
